--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -25,3 +25,4 @@ runs:
         echo Running tests on ${{ inputs.environment }} Environment...
         npm install
         npm run greetings greetings_${{ inputs.environment }}
+      //test
